turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:42: error: ')' expected but ';' found.
  setPos(xDebut;YDebut+75*3)
               ^HouseMany:42: error: ';' expected but ')' found.
  setPos(xDebut;YDebut+75*3)
                           ^